# ChangeLog for www-servers/cherokee
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.94 2012/07/15 17:59:08 blueness Exp $

  15 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  cherokee-1.2.101-r1.ebuild:
  Keyword ~arm ~ppc ~ppc64

  11 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  cherokee-1.2.101-r1.ebuild:
  Keyword ~mips

  24 Mar 2012; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Adopt package

*cherokee-1.2.101-r1 (24 Mar 2012)

  24 Mar 2012; Pacho Ramos <pacho@gentoo.org> +cherokee-1.2.101-r1.ebuild,
  +files/cherokee.logrotate-r1, -cherokee-1.2.101.ebuild,
  -files/cherokee.logrotate:
  Fix logrotate file, bug #400759 by Alan Swanson.

  21 Mar 2012; Pacho Ramos <pacho@gentoo.org> -cherokee-1.2.100.ebuild,
  -cherokee-1.2.99.ebuild, metadata.xml:
  Drop www-server herd as discussed in gentoo-dev ML. Drop old.

  18 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #391429.

*cherokee-1.2.101 (20 Oct 2011)

  20 Oct 2011; MATSUU Takuto <matsuu@gentoo.org> +cherokee-1.2.101.ebuild:
  Version bumped.

*cherokee-1.2.100 (17 Oct 2011)

  17 Oct 2011; MATSUU Takuto <matsuu@gentoo.org> -files/cherokee-initd-0.99.23,
  -cherokee-1.0.12.ebuild, -files/cherokee-initd-1.2.0, -cherokee-1.2.0.ebuild,
  -cherokee-1.2.1.ebuild, -cherokee-1.2.2.ebuild, -files/cherokee-initd-1.2.98,
  -cherokee-1.2.98.ebuild, -files/cherokee-1.2.98-gentoo.patch,
  +cherokee-1.2.100.ebuild:
  Version bumped. Removed old versions.

*cherokee-1.2.99 (16 Sep 2011)

  16 Sep 2011; MATSUU Takuto <matsuu@gentoo.org> +files/cherokee-initd-1.2.99,
  +cherokee-1.2.99.ebuild, +files/cherokee-1.2.99-gentoo.patch,
  +files/cherokee.logrotate:
  Version bumped. Added cherokee.logrotate. Fixed graceful and reload in
  init.d, bug #348929. Clean up.

*cherokee-1.2.98 (26 Aug 2011)
