@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/cherokee
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.94 2012/07/15 17:59:08 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.95 2012/08/08 12:28:37 blueness Exp $
+
+*cherokee-1.2.101-r2 (08 Aug 2012)
+
+  08 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
+  +cherokee-1.2.101-r2.ebuild:
+  Move distributed htdocs to doc dir, bug #429632
 
   15 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
   cherokee-1.2.101-r1.ebuild:
